5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1590_1017.log
== TEST (2019-03-22 21:07:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import* 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1")))
t1 = radians(float(input("Latitude de P2")))
g2 = radians(float(input("Longitude de P2"))) 

d = 6371.01 *acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- ERROR:
File "XXXX", line 11
    d = 6371.01 *acos(sin(t1))*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:08:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import* 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1")))
t1 = radians(float(input("Latitude de P2")))
g2 = radians(float(input("Longitude de P2"))) 

d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 't2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 21:09:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import* 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t1 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:"))) 

d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 't2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 21:09:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import* 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t1 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:"))) 

d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.168027
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 11, in <module>
    d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 't2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:13:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import* 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t1 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:"))) 

d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.187843
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1017/main.py", line 11, in <module>
    d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 't2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:13:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import* 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t1 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:"))) 

d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 't2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 20:13:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import* 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:"))) 

d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 20:13:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

from math import* 
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1:")))
t2 = radians(float(input("Latitude de P2:")))
g2 = radians(float(input("Longitude de P2:"))) 

d = 6371.01 *acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))

print(round(d,2))
-- EXECUTION TIME:
0.14307
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
